src/test/ui/issues/40000-49999/issue-40782.stderr
error: missing `in` in `for` loop
  --> $DIR/issue-40782.rs:4:11
   |
LL |     for _i 0..2 {
   |           ^ help: try adding `in` here

error: missing `in` in `for` loop
  --> $DIR/issue-40782.rs:6:12
   |
LL |     for _i of 0..2 {
   |            ^^ help: try using `in` here instead

error: aborting due to 2 previous errors

